[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_viz"
version = "0.1.0"
description = "A small, friendly wrapper around matplotlib for quick data visualizations."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Prashasti Srivastava", email = "psrivastava7@dons.usfca.edu" },
]
keywords = ["visualization", "matplotlib", "plotting", "charts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pandas>=1.3",
]

[project.urls]
Homepage = "https://github.com/prashasti9/comms_data_science"
Repository = "https://github.com/prashasti9/comms_data_science"

[tool.setuptools.packages.find]
where = ["src"]
